--- a/ShopApi/appsettings.json
+++ b/ShopApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FileName": "Filename=shop.db"
+    "DefaultConnection": "Filename=shop.db"
   },
 
   "Logging": {
