--- a/ShopApi/ShopApi.csproj
+++ b/ShopApi/ShopApi.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <None Update="shop.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
